--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "dependencies": {
-    "express": "^4.21.1",
-    "prompt-sync": "^4.2.0"
-  }
+	"type": "module",
+	"dependencies": {
+		"express": "^4.21.1",
+		"prompt-sync": "^4.2.0"
+	}
 }
